refactor(InputUi): 내부 사용 메서드 변경
- int 반환 필요경우 : Intager.valueOf() -> Integer.parseInt()
- immutableList 반환 : Collections.unmodifiableList -> list.copyOf